--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --build-arg TOKEN=${{secrets.Microservice_token}} --tag cgerull/minimal-flask-server:latest
+      run: docker build . --file Dockerfile --build-arg TOKEN="${{ secrets.Microservice_token }}" --tag cgerull/minimal-flask-server:latest
     - name: Login to DockerHub Registry
-      run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
     - name: Push Docker Image
       run: docker push cgerull/minimal-flask-server:latest
     - name: Logout of Docker
