--- a/.github/workflows/test_actions.yml
+++ b/.github/workflows/test_actions.yml
@@ -24,8 +24,5 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: Get version number
       run: echo ${{ steps.tag.outputs.result }}
-    - uses: olegtarasov/get-tag@v1
-        id: tagName
-      - name: Some other step
-        with:
-            tagname: ${{ steps.tagName.outputs.tag }}         
+    - name: Simple string operation
+      run: echo ${GITHUB_REF:10}         
