--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,6 +1,9 @@
 name: Docker Image CI
 
-on: [push]
+on:
+  push:
+    tags: 
+      - v1.0.0
 
 jobs:
 
@@ -11,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --build-arg TOKEN="${{ secrets.Microservice_token }}" --tag cgerull/minimal-flask-server:latest
+      run: docker build . --file Dockerfile --build-arg TOKEN="${{ secrets.Microservice_token }}" --tag cgerull/minimal-flask-server:${GITHUB_REF:10}
     - name: Login to DockerHub Registry
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
     - name: Push Docker Image
-      run: docker push cgerull/minimal-flask-server:latest
+      run: docker push cgerull/minimal-flask-server:${GITHUB_REF:10}
     - name: Logout of Docker
       run: docker logout
