--- a/.github/workflows/dockerimagetag.yml
+++ b/.github/workflows/dockerimagetag.yml
@@ -2,8 +2,8 @@ name: Docker Image CI tag
 
 on:
   push:
-    branches: 
-      - master
+    tags: 
+      - 'v*'
 
 jobs:
 
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --build-arg TOKEN="${{ secrets.Microservice_token }}" --tag cgerull/minimal-flask-server:${GITHUB_REF:10}
+      run: docker build . --file Dockerfile --build-arg TOKEN="${{ secrets.Microservice_token }}" --tag cgerull/minimal-flask-server:${GITHUB_REF:11}
     - name: Login to DockerHub Registry
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
     - name: Push Docker Image
-      run: docker push cgerull/minimal-flask-server:${GITHUB_REF:10}
+      run: docker push cgerull/minimal-flask-server:${GITHUB_REF:11}
     - name: Logout of Docker
       run: docker logout
